syntax = "proto3";
package dev.array21.invoicex;

message ProductRemoveRequest {
  string productId = 1;
}